--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPEhtml>
-<html lang?"en">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="freeCodeCamp Tribute Page practice project" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Tribute Page for the freeCodeCamp Responsive Web Design course</title>
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main id="main">
